--- a/To-do JS/edit-task.html
+++ b/To-do JS/edit-task.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Add Task</title>
+    <title>Edit Task</title>
     <link rel="stylesheet" href="style.css" />
 
 </head>
 
 <body>
     <div class="container">
-        <h1>Add Task</h1>
+        <h1>Edit Task</h1>
     </div>
 
     <div id="navbar"></div>
@@ -90,7 +90,7 @@
 
 
             <div class="buttons-row">
-                <button type="submit" class="add-task-btn">Add Task</button>
+                <button type="submit" class="add-task-btn">Edit Task</button>
                 <button type="reset" class="reset-btn">Reset</button>
                 <button type="button" class="cancel-btn">Cancel</button>
             </div>
