--- a/To-do JS/index.html
+++ b/To-do JS/index.html
@@ -77,9 +77,9 @@
         }
 
         function editTask(taskId) {
-            alert('Edit functionality coming soon!');
-            console.log('Edit task:', taskId);
+            window.location.href = `edit-task.html?id=${taskId}`;
         }
+
 
         function deleteTaskFromList(taskId) {
             if (confirm('Are you sure you want to delete this task?')) {
@@ -105,5 +105,4 @@
     </script>
     <script src="script.js"></script>
 </body>
-
 </html>
