--- a/To-do JS/task-details.html
+++ b/To-do JS/task-details.html
@@ -16,7 +16,7 @@
 
         <div class="action-buttons">
             <button class="btn-retrieve" onclick="goHome()">Retrieve</button>
-            <button class="btn-edit" onclick="editTask()">Edit</button>
+            <button class="btn-edit" id="editBtn">Edit</button>
             <button class="btn-delete" onclick="deleteTask()">Delete</button>
         </div>
 
