--- a/institute-frontend/index.html
+++ b/institute-frontend/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="https://cdn-icons-png.freepik.com/256/9329/9329651.png?semt=ais_hybrid" />
+    <link className="rounded-full" type="image/svg+xml" href="https://www.vhv.rs/dpng/d/426-4262188_icon-students-red-education-icon-png-transparent-png.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>React-To-Do</title>
+    <title>Institute Management</title>
   </head>
   <body>
     <div id="root"></div>
