--- a/institute-frontend/index.html
+++ b/institute-frontend/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link className="rounded-full" type="image/svg+xml" href="https://www.vhv.rs/dpng/d/426-4262188_icon-students-red-education-icon-png-transparent-png.png" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Institute Management</title>
   </head>
