--- a/institute-app/institute-frontend/index.html
+++ b/institute-app/institute-frontend/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link className="rounded-full" type="image/svg+xml" href="https://www.vhv.rs/dpng/d/426-4262188_icon-students-red-education-icon-png-transparent-png.png" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=school" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Institute Management</title>
